--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     margin: 0;
     padding: 0;
     color: rgba(255, 255, 255, 0.87);
@@ -45,4 +45,4 @@ body {
         border: 1px solid rgba(255, 255, 255, 0.3);
         color: rgba(255, 255, 255, 0.3);
     }
-}
+} */
